--- a/myApp/package.json
+++ b/myApp/package.json
@@ -9,17 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45",
     "@vueuse/components": "^7.5.3",
     "@vueuse/core": "^7.5.3",
-    "vue-router": "^4.0.12"
+    "vee-validate": "^4.7.4",
+    "vue": "^3.2.45",
+    "vue-router": "^4.0.12",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
-    "eslint-plugin-vue": "^9.9.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
