--- a/myApp/package.json
+++ b/myApp/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
+    "sass": "^1.59.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
