--- a/myApp/package.json
+++ b/myApp/package.json
@@ -12,6 +12,7 @@
     "@vueuse/components": "^7.5.3",
     "@vueuse/core": "^7.5.3",
     "express": "^4.18.2",
+    "pinia": "^2.1.4",
     "vee-validate": "^4.7.4",
     "vue": "^3.2.45",
     "vue-router": "^4.0.12",
