--- a/myApp/ssr2/package.json
+++ b/myApp/ssr2/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node --loader ts-node/esm server.ts",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --outDir dist/server --ssr src/server-entry.ts",
     "build": "pnpm run build:client && pnpm run build:server",
@@ -23,6 +23,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "cross-env": "^7.0.3",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
